# curl-impersonate

./: .gitignore  AGENTS.md  Makefile.in  configure  configure.ac
.github/workflows/: build-docker.yml  build-win.yaml  build.yml  release.yml
docs/: wcurl-impersonate.md
lib/: impersonate.c  impersonate.h
patches/: curl.patch
